--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@
 
 .header__link:hover{
     color: rgb(203, 139, 22);
+    transition: all 1s ease;
 }
 .service__list{
     display: flex;
@@ -54,12 +55,13 @@
     height: 35px;
     border: none;
     border-radius: 5px;
-    box-shadow: 5px 5px 5px rgb(83, 56, 7);
 }
 .service__button:hover{
     background-color: white;
     color: rgb(203, 139, 22);
     border: 0.5px solid rgb(203, 139, 22);
+    transform: scale(1.1);
+    transition: all 1s ease;
 }
 .service__button:active{
 background-color: rgb(83, 56, 7);
@@ -72,11 +74,12 @@ color: white;
     height: 35px;
     border-radius: 5px;
     border: 0.5px solid rgb(203, 139, 22);
-    box-shadow: 5px 5px 5px rgb(83, 56, 7);
 }
 .service__button2:hover{
     background-color: rgb(87, 61, 11);
     color: white;
+    transform: scale(1.1);
+    transition: all 1s ease;
 }
 .service__button2:active{
     background-color: rgb(184, 146, 81);
